--- a/requirements.txt
+++ b/requirements.txt
@@ -13,14 +13,13 @@ asttokens==2.4.1
 async-lru==2.0.4
 async-timeout==4.0.3
 attrs==23.2.0
-Babel==2.15.0
+Babel==2.14.0
+backcall==0.2.0
 backoff==2.2.1
 bcrypt==4.1.3
 beautifulsoup4==4.12.3
 bleach==6.1.0
 blinker==1.8.2
-boto3==1.34.112
-botocore==1.34.112
 Brotli==1.1.0
 build==1.2.1
 cachetools==5.3.3
@@ -30,7 +29,6 @@ charset-normalizer==3.3.2
 chroma-hnswlib==0.7.3
 chromadb==0.4.24
 click==8.1.7
-cohere==5.5.3
 colorama==0.4.6
 coloredlogs==15.0.1
 comm==0.2.2
@@ -46,17 +44,17 @@ defusedxml==0.7.1
 Deprecated==1.2.14
 deprecation==2.1.0
 distro==1.9.0
+docopt==0.6.2
 docstring-parser==0.15
 docx2txt==0.8
 embedchain==0.1.102
-exceptiongroup==1.2.1
+exceptiongroup==1.2.0
 executing==2.0.1
 fastapi==0.110.3
-fastavro==1.9.4
 fastjsonschema==2.19.1
-filelock==3.14.0
+filelock==3.13.3
 flatbuffers==24.3.25
-fonttools==4.51.0
+fonttools==4.50.0
 fqdn==1.5.1
 frozenlist==1.4.1
 fsspec==2024.3.1
@@ -81,53 +79,50 @@ h11==0.14.0
 httpcore==1.0.5
 httptools==0.6.1
 httpx==0.27.0
-httpx-sse==0.4.0
 huggingface-hub==0.23.1
 humanfriendly==10.0
-idna==3.7
+idna==3.6
 importlib-metadata==7.0.0
 importlib_resources==6.4.0
 iniconfig==2.0.0
 instructor==0.5.2
 ipykernel==6.29.4
-ipython==8.24.0
+ipython==8.12.3
 isoduration==20.11.0
 jedi==0.19.1
-Jinja2==3.1.4
-jmespath==1.0.1
-joblib==1.4.2
-json5==0.9.25
+Jinja2==3.1.3
+joblib==1.3.2
+json5==0.9.24
 jsonpatch==1.33
 jsonpointer==2.4
-jsonschema==4.22.0
+jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
 jupyter-events==0.10.0
-jupyter-lsp==2.2.5
+jupyter-lsp==2.2.4
 jupyter-server-mathjax==0.2.6
 jupyter_client==8.6.1
 jupyter_core==5.7.2
-jupyter_server==2.14.0
+jupyter_server==2.13.0
 jupyter_server_terminals==0.5.3
-jupyterlab==4.2.0
+jupyterlab==4.1.5
 jupyterlab_git==0.50.0
 jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.1
+jupyterlab_server==2.25.4
 kiwisolver==1.4.5
 kubernetes==29.0.0
 lancedb==0.5.7
 langchain==0.1.20
-langchain-cohere==0.1.5
 langchain-community==0.0.38
 langchain-core==0.1.52
 langchain-openai==0.0.5
 langchain-text-splitters==0.0.2
-langsmith==0.1.63
+langsmith==0.1.60
 Mako==1.3.5
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 marshmallow==3.21.2
-matplotlib==3.8.4
-matplotlib-inline==0.1.7
+matplotlib==3.8.3
+matplotlib-inline==0.1.6
 mdurl==0.1.2
 mistune==3.0.2
 mmh3==4.1.0
@@ -137,17 +132,29 @@ multidict==6.0.5
 mutagen==1.47.0
 mypy-extensions==1.0.0
 nbclient==0.10.0
-nbconvert==7.16.4
+nbconvert==7.16.3
 nbdime==4.0.1
-nbformat==5.10.4
+nbformat==5.10.3
 nest-asyncio==1.6.0
-networkx==3.3
+networkx==3.2.1
 nodeenv==1.8.0
 notebook_shim==0.2.4
 numpy==1.26.4
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.19.3
+nvidia-nvjitlink-cu12==12.4.99
+nvidia-nvtx-cu12==12.1.105
 oauthlib==3.2.2
 onnxruntime==1.18.0
-openai==1.30.2
+openai==1.30.1
 opentelemetry-api==1.24.0
 opentelemetry-exporter-otlp-proto-common==1.24.0
 opentelemetry-exporter-otlp-proto-grpc==1.24.0
@@ -163,13 +170,15 @@ orjson==3.10.3
 outcome==1.3.0.post0
 overrides==7.7.0
 packaging==23.2
-pandas==2.2.2
+pandas==2.2.1
 pandocfilters==1.5.1
-parso==0.8.4
+parso==0.8.3
 pexpect==4.9.0
+pickleshare==0.7.5
 pillow==10.3.0
-platformdirs==4.2.1
-plotly==5.22.0
+pipreqs==0.5.0
+platformdirs==4.2.0
+plotly==5.20.0
 pluggy==1.5.0
 posthog==3.5.0
 prometheus_client==0.20.0
@@ -190,7 +199,7 @@ pydantic==2.7.1
 pydantic_core==2.18.2
 pydeck==0.9.1
 PyGithub==1.59.1
-Pygments==2.18.0
+Pygments==2.17.2
 PyJWT==2.8.0
 pylance==0.9.18
 PyNaCl==1.5.0
@@ -198,7 +207,7 @@ pyparsing==3.1.2
 pypdf==3.17.4
 PyPika==0.48.9
 pyproject_hooks==1.1.0
-pyright==1.1.364
+pyright==1.1.363
 pysbd==0.3.4
 PySocks==1.7.1
 pysqlite3-binary==0.5.2.post3
@@ -209,9 +218,9 @@ python-json-logger==2.0.7
 pytube==15.0.0
 pytz==2024.1
 PyYAML==6.0.1
-pyzmq==26.0.3
+pyzmq==25.1.2
 ratelimiter==1.2.0.post0
-referencing==0.35.1
+referencing==0.34.0
 regex==2023.12.25
 requests==2.31.0
 requests-oauthlib==2.0.0
@@ -219,16 +228,15 @@ retry==0.9.2
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rich==13.7.1
-rpds-py==0.18.1
+rpds-py==0.18.0
 rsa==4.9
-s3transfer==0.10.1
 schema==0.7.7
-scikit-learn==1.4.2
+scikit-learn==1.4.1.post1
 scipy==1.13.0
 seaborn==0.13.2
 selenium==4.21.0
 semver==3.0.2
-Send2Trash==1.8.3
+Send2Trash==1.8.2
 shapely==2.0.4
 six==1.16.0
 smmap==5.0.1
@@ -238,42 +246,43 @@ soupsieve==2.5
 SQLAlchemy==2.0.30
 stack-data==0.6.3
 starlette==0.37.2
-streamlit==1.35.0
+streamlit==1.34.0
 sympy==1.12
-tenacity==8.3.0
+tenacity==8.2.3
 terminado==0.18.1
-threadpoolctl==3.5.0
+threadpoolctl==3.4.0
 tiktoken==0.5.2
-tinycss2==1.3.0
+tinycss2==1.2.1
 tokenizers==0.19.1
 toml==0.10.2
 tomli==2.0.1
 toolz==0.12.1
-torch==2.3.0+cpu
+torch==2.2.2
 tornado==6.4
 tqdm==4.66.4
-traitlets==5.14.3
+traitlets==5.14.2
 trio==0.25.1
 trio-websocket==0.11.1
+triton==2.2.0
 typer==0.9.4
 types-python-dateutil==2.9.0.20240316
-types-requests==2.32.0.20240523
 typing-inspect==0.9.0
-typing_extensions==4.11.0
+typing_extensions==4.10.0
 tzdata==2024.1
 uri-template==1.3.0
 urllib3==2.0.7
 uvicorn==0.29.0
 uvloop==0.19.0
-watchdog==4.0.1
+watchdog==4.0.0
 watchfiles==0.21.0
 wcwidth==0.2.13
 webcolors==1.13
 webencodings==0.5.1
-websocket-client==1.8.0
+websocket-client==1.7.0
 websockets==12.0
 wrapt==1.16.0
 wsproto==1.2.0
+yarg==0.1.9
 yarl==1.9.4
 youtube-transcript-api==0.6.2
 yt-dlp==2023.12.30
